pyg4ometry/gdml/Expression/GdmlExpressionParser.py
# Generated from GdmlExpression.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class GdmlExpressionParser ( Parser ):

    grammarFileName = "GdmlExpression.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'cos'", u"'sin'", u"'tan'", u"'acos'", 
                     u"'asin'", u"'atan'", u"'log'", u"'log10'", u"'sqrt'", 
                     u"'exp'", u"'('", u"')'", u"'['", u"']'", u"'+'", u"'-'", 
                     u"'*'", u"'/'", u"'>'", u"'<'", u"'='", u"','", u"'.'", 
                     u"'^'", u"'pi'", u"<INVALID>", u"'i'" ]

    symbolicNames = [ u"<INVALID>", u"COS", u"SIN", u"TAN", u"ACOS", u"ASIN", 
                      u"ATAN", u"LN", u"LOG", u"SQRT", u"EXP", u"LPAREN", 
                      u"RPAREN", u"LBRACKET", u"RBRACKET", u"PLUS", u"MINUS", 
                      u"TIMES", u"DIV", u"GT", u"LT", u"EQ", u"COMMA", u"POINT", 
                      u"POW", u"PI", u"EULER", u"I", u"VARIABLE", u"SCIENTIFIC_NUMBER", 
                      u"WS" ]

    RULE_equation = 0
    RULE_expression = 1
    RULE_multiplyingExpression = 2
    RULE_operatorAddSub = 3
    RULE_operatorMulDiv = 4
    RULE_powExpression = 5
    RULE_signedAtom = 6
    RULE_atom = 7
    RULE_scientific = 8
    RULE_matrixElement = 9
    RULE_constant = 10
    RULE_variable = 11
    RULE_func = 12
    RULE_funcname = 13
    RULE_relop = 14

    ruleNames =  [ u"equation", u"expression", u"multiplyingExpression", 
                   u"operatorAddSub", u"operatorMulDiv", u"powExpression", 
                   u"signedAtom", u"atom", u"scientific", u"matrixElement", 
                   u"constant", u"variable", u"func", u"funcname", u"relop" ]

    EOF = Token.EOF
    COS=1
    SIN=2
    TAN=3
    ACOS=4
    ASIN=5
    ATAN=6
    LN=7
    LOG=8
    SQRT=9
    EXP=10
    LPAREN=11
    RPAREN=12
    LBRACKET=13
    RBRACKET=14
    PLUS=15
    MINUS=16
    TIMES=17
    DIV=18
    GT=19
    LT=20
    EQ=21
    COMMA=22
    POINT=23
    POW=24
    PI=25
    EULER=26
    I=27
    VARIABLE=28
    SCIENTIFIC_NUMBER=29
    WS=30

    def __init__(self, input, output=sys.stdout):
        super(GdmlExpressionParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class EquationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.EquationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.ExpressionContext,i)


        def relop(self):
            return self.getTypedRuleContext(GdmlExpressionParser.RelopContext,0)


        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_equation

        def enterRule(self, listener):
            if hasattr(listener, "enterEquation"):
                listener.enterEquation(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEquation"):
                listener.exitEquation(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitEquation"):
                return visitor.visitEquation(self)
            else:
                return visitor.visitChildren(self)




    def equation(self):

        localctx = GdmlExpressionParser.EquationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_equation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.expression()
            self.state = 31
            self.relop()
            self.state = 32
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def multiplyingExpression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.MultiplyingExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.MultiplyingExpressionContext,i)


        def operatorAddSub(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.OperatorAddSubContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.OperatorAddSubContext,i)


        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_expression

        def enterRule(self, listener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = GdmlExpressionParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.multiplyingExpression()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GdmlExpressionParser.PLUS or _la==GdmlExpressionParser.MINUS:
                self.state = 35
                self.operatorAddSub()
                self.state = 36
                self.multiplyingExpression()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiplyingExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.MultiplyingExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def powExpression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.PowExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.PowExpressionContext,i)


        def operatorMulDiv(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.OperatorMulDivContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.OperatorMulDivContext,i)


        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_multiplyingExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterMultiplyingExpression"):
                listener.enterMultiplyingExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMultiplyingExpression"):
                listener.exitMultiplyingExpression(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMultiplyingExpression"):
                return visitor.visitMultiplyingExpression(self)
            else:
                return visitor.visitChildren(self)




    def multiplyingExpression(self):

        localctx = GdmlExpressionParser.MultiplyingExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_multiplyingExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.powExpression()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GdmlExpressionParser.TIMES or _la==GdmlExpressionParser.DIV:
                self.state = 44
                self.operatorMulDiv()
                self.state = 45
                self.powExpression()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorAddSubContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.OperatorAddSubContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(GdmlExpressionParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(GdmlExpressionParser.MINUS, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_operatorAddSub

        def enterRule(self, listener):
            if hasattr(listener, "enterOperatorAddSub"):
                listener.enterOperatorAddSub(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOperatorAddSub"):
                listener.exitOperatorAddSub(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitOperatorAddSub"):
                return visitor.visitOperatorAddSub(self)
            else:
                return visitor.visitChildren(self)




    def operatorAddSub(self):

        localctx = GdmlExpressionParser.OperatorAddSubContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operatorAddSub)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            _la = self._input.LA(1)
            if not(_la==GdmlExpressionParser.PLUS or _la==GdmlExpressionParser.MINUS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorMulDivContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.OperatorMulDivContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TIMES(self):
            return self.getToken(GdmlExpressionParser.TIMES, 0)

        def DIV(self):
            return self.getToken(GdmlExpressionParser.DIV, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_operatorMulDiv

        def enterRule(self, listener):
            if hasattr(listener, "enterOperatorMulDiv"):
                listener.enterOperatorMulDiv(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOperatorMulDiv"):
                listener.exitOperatorMulDiv(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitOperatorMulDiv"):
                return visitor.visitOperatorMulDiv(self)
            else:
                return visitor.visitChildren(self)




    def operatorMulDiv(self):

        localctx = GdmlExpressionParser.OperatorMulDivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operatorMulDiv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not(_la==GdmlExpressionParser.TIMES or _la==GdmlExpressionParser.DIV):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PowExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.PowExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def signedAtom(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.SignedAtomContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.SignedAtomContext,i)


        def POW(self, i=None):
            if i is None:
                return self.getTokens(GdmlExpressionParser.POW)
            else:
                return self.getToken(GdmlExpressionParser.POW, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_powExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterPowExpression"):
                listener.enterPowExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPowExpression"):
                listener.exitPowExpression(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPowExpression"):
                return visitor.visitPowExpression(self)
            else:
                return visitor.visitChildren(self)




    def powExpression(self):

        localctx = GdmlExpressionParser.PowExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_powExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.signedAtom()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GdmlExpressionParser.POW:
                self.state = 57
                self.match(GdmlExpressionParser.POW)
                self.state = 58
                self.signedAtom()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignedAtomContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.SignedAtomContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(GdmlExpressionParser.PLUS, 0)

        def signedAtom(self):
            return self.getTypedRuleContext(GdmlExpressionParser.SignedAtomContext,0)


        def MINUS(self):
            return self.getToken(GdmlExpressionParser.MINUS, 0)

        def func(self):
            return self.getTypedRuleContext(GdmlExpressionParser.FuncContext,0)


        def atom(self):
            return self.getTypedRuleContext(GdmlExpressionParser.AtomContext,0)


        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_signedAtom

        def enterRule(self, listener):
            if hasattr(listener, "enterSignedAtom"):
                listener.enterSignedAtom(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSignedAtom"):
                listener.exitSignedAtom(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSignedAtom"):
                return visitor.visitSignedAtom(self)
            else:
                return visitor.visitChildren(self)




    def signedAtom(self):

        localctx = GdmlExpressionParser.SignedAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_signedAtom)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GdmlExpressionParser.PLUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(GdmlExpressionParser.PLUS)
                self.state = 65
                self.signedAtom()
                pass
            elif token in [GdmlExpressionParser.MINUS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(GdmlExpressionParser.MINUS)
                self.state = 67
                self.signedAtom()
                pass
            elif token in [GdmlExpressionParser.COS, GdmlExpressionParser.SIN, GdmlExpressionParser.TAN, GdmlExpressionParser.ACOS, GdmlExpressionParser.ASIN, GdmlExpressionParser.ATAN, GdmlExpressionParser.LN, GdmlExpressionParser.LOG, GdmlExpressionParser.SQRT, GdmlExpressionParser.EXP]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.func()
                pass
            elif token in [GdmlExpressionParser.LPAREN, GdmlExpressionParser.PI, GdmlExpressionParser.EULER, GdmlExpressionParser.I, GdmlExpressionParser.VARIABLE, GdmlExpressionParser.SCIENTIFIC_NUMBER]:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.atom()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.AtomContext, self).__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(GdmlExpressionParser.ScientificContext,0)


        def matrixElement(self):
            return self.getTypedRuleContext(GdmlExpressionParser.MatrixElementContext,0)


        def variable(self):
            return self.getTypedRuleContext(GdmlExpressionParser.VariableContext,0)


        def constant(self):
            return self.getTypedRuleContext(GdmlExpressionParser.ConstantContext,0)


        def LPAREN(self):
            return self.getToken(GdmlExpressionParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(GdmlExpressionParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(GdmlExpressionParser.RPAREN, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_atom

        def enterRule(self, listener):
            if hasattr(listener, "enterAtom"):
                listener.enterAtom(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAtom"):
                listener.exitAtom(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAtom"):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = GdmlExpressionParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.scientific()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.matrixElement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.variable()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.constant()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.match(GdmlExpressionParser.LPAREN)
                self.state = 77
                self.expression()
                self.state = 78
                self.match(GdmlExpressionParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScientificContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.ScientificContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SCIENTIFIC_NUMBER(self):
            return self.getToken(GdmlExpressionParser.SCIENTIFIC_NUMBER, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_scientific

        def enterRule(self, listener):
            if hasattr(listener, "enterScientific"):
                listener.enterScientific(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitScientific"):
                listener.exitScientific(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitScientific"):
                return visitor.visitScientific(self)
            else:
                return visitor.visitChildren(self)




    def scientific(self):

        localctx = GdmlExpressionParser.ScientificContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_scientific)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(GdmlExpressionParser.SCIENTIFIC_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MatrixElementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.MatrixElementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(GdmlExpressionParser.VariableContext,0)


        def LBRACKET(self):
            return self.getToken(GdmlExpressionParser.LBRACKET, 0)

        def scientific(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.ScientificContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.ScientificContext,i)


        def RBRACKET(self):
            return self.getToken(GdmlExpressionParser.RBRACKET, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(GdmlExpressionParser.COMMA)
            else:
                return self.getToken(GdmlExpressionParser.COMMA, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_matrixElement

        def enterRule(self, listener):
            if hasattr(listener, "enterMatrixElement"):
                listener.enterMatrixElement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMatrixElement"):
                listener.exitMatrixElement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMatrixElement"):
                return visitor.visitMatrixElement(self)
            else:
                return visitor.visitChildren(self)




    def matrixElement(self):

        localctx = GdmlExpressionParser.MatrixElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_matrixElement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.variable()
            self.state = 85
            self.match(GdmlExpressionParser.LBRACKET)
            self.state = 86
            self.scientific()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GdmlExpressionParser.COMMA:
                self.state = 87
                self.match(GdmlExpressionParser.COMMA)
                self.state = 88
                self.scientific()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(GdmlExpressionParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.ConstantContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PI(self):
            return self.getToken(GdmlExpressionParser.PI, 0)

        def EULER(self):
            return self.getToken(GdmlExpressionParser.EULER, 0)

        def I(self):
            return self.getToken(GdmlExpressionParser.I, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_constant

        def enterRule(self, listener):
            if hasattr(listener, "enterConstant"):
                listener.enterConstant(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConstant"):
                listener.exitConstant(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitConstant"):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = GdmlExpressionParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GdmlExpressionParser.PI) | (1 << GdmlExpressionParser.EULER) | (1 << GdmlExpressionParser.I))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.VariableContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(GdmlExpressionParser.VARIABLE, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_variable

        def enterRule(self, listener):
            if hasattr(listener, "enterVariable"):
                listener.enterVariable(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVariable"):
                listener.exitVariable(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVariable"):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = GdmlExpressionParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(GdmlExpressionParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.FuncContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcname(self):
            return self.getTypedRuleContext(GdmlExpressionParser.FuncnameContext,0)


        def LPAREN(self):
            return self.getToken(GdmlExpressionParser.LPAREN, 0)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(GdmlExpressionParser.RPAREN, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(GdmlExpressionParser.COMMA)
            else:
                return self.getToken(GdmlExpressionParser.COMMA, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_func

        def enterRule(self, listener):
            if hasattr(listener, "enterFunc"):
                listener.enterFunc(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFunc"):
                listener.exitFunc(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFunc"):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = GdmlExpressionParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.funcname()
            self.state = 101
            self.match(GdmlExpressionParser.LPAREN)
            self.state = 102
            self.expression()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GdmlExpressionParser.COMMA:
                self.state = 103
                self.match(GdmlExpressionParser.COMMA)
                self.state = 104
                self.expression()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(GdmlExpressionParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncnameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GdmlExpressionParser.FuncnameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def COS(self):
            return self.getToken(GdmlExpressionParser.COS, 0)

        def TAN(self):
            return self.getToken(GdmlExpressionParser.TAN, 0)

        def SIN(self):
            return self.getToken(GdmlExpressionParser.SIN, 0)

        def ACOS(self):
            return self.getToken(GdmlExpressionParser.ACOS, 0)

        def ATAN(self):
            return self.getToken(GdmlExpressionParser.ATAN, 0)

        def ASIN(self):
            return self.getToken(GdmlExpressionParser.ASIN, 0)

        def LOG(self):
            return self.getToken(GdmlExpressionParser.LOG, 0)

        def LN(self):
            return self.getToken(GdmlExpressionParser.LN, 0)

        def EXP(self):
            return self.getToken(GdmlExpressionParser.EXP, 0)

        def SQRT(self):
            return self.getToken(GdmlExpressionParser.SQRT, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_funcname

        def enterRule(self, listener):
            if hasattr(listener, "enterFuncname"):
                listener.enterFuncname(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFuncname"):
                listener.exitFuncname(self)
